# spotify_profile_monitor

./: .gitignore  README.md  RELEASE_NOTES.md  pyproject.toml  requirements.txt  spotify_profile_monitor.py
.github/workflows/: publish.yml
grc/: conf.monitor_logs
