[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify_profile_monitor"
version = "2.5.3"
description = "Tool implementing real-time tracking of Spotify users activities and profile changes including playlists"
readme = "README.md"
license = "GPL-3.0-or-later"
license-files = ["LICEN[CS]E*"]
authors = [{ name = "Michal Szymanski", email = "misiektoja-pypi@rm-rf.ninja" }]
requires-python = ">=3.6"
dependencies = [
  "requests>=2.0",
  "python-dateutil>=2.8",
  "urllib3>=2.0.7",
  "pyotp>=2.9.0",
  "pytz>=2020.1",
  "tzlocal>=4.0",
  "python-dotenv>=0.19",
  "spotipy>=2.24.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX :: Linux",
  "Operating System :: MacOS :: MacOS X",
]
keywords = ["spotify", "monitoring", "tracking", "real-time", "playlists", "osint"]

[project.urls]
Homepage = "https://github.com/misiektoja/spotify_profile_monitor"
Source   = "https://github.com/misiektoja/spotify_profile_monitor"
Changelog= "https://github.com/misiektoja/spotify_profile_monitor/blob/main/RELEASE_NOTES.md"

[project.scripts]
spotify_profile_monitor = "spotify_profile_monitor:main"

[tool.setuptools]
py-modules = ["spotify_profile_monitor"]
include-package-data = true
